--- a/Lab-exercise.ipynb
+++ b/Lab-exercise.ipynb
@@ -2,30 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "What is your name? max\n",
-      "choose a letter in your name a\n"
+      "What is your name? maix\n",
+      "choose a vowel in your name, if you don't have one, try using your last name a\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "m x\n"
+      "New name with chosen vowel removed:  m ix\n",
+      "There are/is 1 vowel(s) in your new name\n"
      ]
     }
    ],
    "source": [
     "name = input(\"What is your name?\")\n",
-    "letter = input(\"choose a letter in your name\")\n",
+    "letter = input(\"choose a vowel in your name, if you don't have one, try using your last name\")\n",
     "name2 = name.replace(letter, \" \")\n",
-    "print(name2)"
+    "count = 0\n",
+    "print(\"New name with chosen vowel removed: \", name2)\n",
+    "for char in name2:\n",
+    "   if char in \"aeiouAEIOU\":\n",
+    "    count = count+1\n",
+    "print(\"There are/is\", count, \"vowel(s) in your new name\")"
    ]
   },
   {
